updated emailjs functionality and added contact page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Austyn Cody</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div id="root" class="root"></div>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
